# nixos-config

./: .gitignore  README.md  build-rpi.sh  configuration.nix  distributed.nix  flake.nix  nix-on-droid.nix  p10k.zsh  packages-all.nix  packages-desktop.nix  ports.nix  treefmt.nix
hosts/virtualbox/inventree-ws/: plugin-overrides.nix  pyproject.toml
lib/: host.nix  user.nix
modules/: agenix-cli.nix  jellyfin.nix  smartd.nix  syncthing.nix  xmpp-alert.nix  xmpp-bridge.nix
nvim-config/: nvim-config.nix
overlays/: inventree.nix  python.nix  yt-dlp.nix
scripts/: gopass-create.sh  gopass-init.sh
secrets/: alert-gmail.age  alert-outlook.age  dawarich-secret-key-base-ptolemy.age  immich-db-creds-ptolemy.age  immich-db-creds-virtualbox.age  inventree-backup-pat-ptolemy.age  inventree-backup-pat-virtualbox.age  inventree-jasper-ptolemy.age  inventree-jasper-virtualbox.age  inventree-secret-ptolemy.age  inventree-secret-virtualbox.age  jasper-arios.age  jasper-haro.age  jasper-ptolemy.age  jasper-veda.age  jasper-virtualbox.age  jellyfin-ptolemy.age  kvmd-htpasswd-haro.age  kvmd-ipmipasswd-haro.age  kvmd-totp-secret-haro.age  kvmd-vnc-cert-haro.age  kvmd-vnc-key-haro.age  kvmd-vncpasswd-haro.age  nix-auto-push-private-key.age  nix-serve-private-key-builders.age  nix-serve-private-key-ptolemy.age  nix-serve-public-key-builders.pem.pub  nix-serve-public-key-ptolemy.age  nix-serve-public-key-ptolemy.pem.pub  paperless-ptolemy.age  rekey.exp  restic-environment-storj-ptolemy.age  restic-environment-storj-virtualbox.age  restic-password-storj-ptolemy.age  samba-ptolemy.age  (+21 more)
(+48 files in other folders)
