[project]
name = "inventree-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inventree-digikey-supplier",
    "inventree-kicad-plugin>=2.0.4",
]

[tool.uv.sources]
inventree-digikey-supplier = { git = "https://github.com/Gigahawk/inventree-digikey-supplier.git" }
