[project]
name = "inventree-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inventree-digikey-supplier",
    "inventree-kicad-plugin>=2.0.4",
    "inventree-smart-parts",
]

[tool.uv.sources]
inventree-digikey-supplier = { git = "https://github.com/Gigahawk/inventree-digikey-supplier.git" }
inventree-smart-parts = { git = "https://github.com/0neShot/SmartParts.git" }
